# pa10mini

./: .gitignore  License.txt  PA10mini-compilation-windows-32-64bit-manichev.txt  PA10mini-readme.txt  README.md  README_old.md  READMEx64.md  changelog.txt  diplom PA10mini C# Алиев Женя.docx  diplom PA10mini C# Пузырев.docx  diplom pa10 tests.docx  programming_guide.odt  Диплом Баженов Сергей.docx  ТЗ к ПА10.doc
PA10mini_all/: pa10mini_all.pro
PA10mini_all/ctests/: ctest_manzhuk.cpp  ctest_manzhuk.h  ctests.pro
PA10mini_all/pa10mini/: CMakeLists.txt  circuititem.cpp  circuititem.h  circuititemedit.cpp  circuititemedit.h  circuititemedit.ui  cl_out.txt  daesystem.cpp  daesystem.h  equaledit.cpp  location.hh  main.cpp  pa10mini.pro  parser.hpp  parser.output  parser.y  pax_prototype.cpp  pax_prototype.qrc  position.hh  scanner.h  scanner.l  schemeview.cpp  schemeview.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  solver.cpp  solver.h  solverparam.h  stack.hh  textdriver.cpp  textdriver.h  variablechooser.cpp  variablechooser.ui
PA10mini_all/pa10mini/manzhuk/: manzhuk.cpp  manzhuk.h
PA10mini_all/pa10mini/manzhuk/fcttask/: build.cmd  build_linux.sh  build_vc.bat  fcttask.cpp  fcttask.h
PA10mini_all/pa10mini/tests/: Duffing-sintax-error.txt  Duffing.txt  PA10-test01.txt  PA10-test02.txt  PA10-test3.txt  lc-ode-sintax-error.txt  lc.txt  rc-ode.txt  rlc-base-ode.txt  rlc-base.txt  rlc-filtr-ode.txt  rlc-filtr.txt  test_Van_der_Pol_equations.txt
PA10mini_all/sources/: CMakeLists.txt  circuititem.cpp  circuititem.h  circuititemedit.cpp  circuititemedit.h  daesystem.cpp  daesystem.h  equaledit.cpp  equaledit.h  expression.cpp  expression.h  location.hh  main.cpp  pa10mini.pro  parser.cpp  parser.hpp  pax_prototype.cpp  pax_prototype.h  pax_prototype.qrc  pax_prototype.ui  plot.cpp  plot.h  plotwindow.cpp  plotwindow.h  plotwindow.ui  resource.h  scanner.cpp  scanner.h  schemeview.cpp  schemeview.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  solver.cpp  solver.h  solverparam.cpp  solverparam.h  solverparam.ui  textdriver.cpp  variablechooser.cpp  (+1 more)
PA10mini_all/sources/GeneratedFiles/: qrc_pax_prototype.cpp  ui_circuititemedit.h  ui_pax_prototype.h  ui_plotwindow.h  ui_solverparam.h  ui_variablechooser.h
PA10mini_all/sources/manzhuk/: manzhuk.cpp  manzhuk.h
PA10mini_all/sources/manzhuk/fcttask/: fcttask.cpp  fcttask.h  makefile
PA10mini_all/sources/tests/: PA10-test04.txt  lc-ode.txt  rc.txt
PA10mini_all/tests/: tests.pro  tst_manzhuk.cpp  tst_manzhuk.h
